--- a/docs/releases/release-process.adoc
+++ b/docs/releases/release-process.adoc
@@ -2,7 +2,7 @@
 
 For every release, certain steps have to be performed:
 
-== Verify Release
+== Validate Release
 
 - test application on all platforms
 
@@ -28,3 +28,16 @@ For every release, certain steps have to be performed:
 - post on bluesky
 - post on reddit
 - post on instagram?
+
+
+== Certum Certificate
+
+- Buy Certificate (Open Source Developer)
+- Validate Identity via documents / Photos of ID ...
+- Issue/Activate Certificate on Website
+- Install Certificate via Website (certum service and proCertum Card Manager have to be installed)
+- Check that certificate was installed on card reader
+- REBOOT
+- (not sure about installing/exporting certificate to disk (?))
+- now Certificate should show up in Advanced Installer
+- LogoRRR can now be build and certified on admin console via `win.bat`
